--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   },	  
   "autoload": {
         "psr-4": {
-            "frdl\\security\\floodprotection": "src/php-floodprotection/frdl/security/floodprotection/"
+            "frdl\\security\\floodprotection\\": "src/php-floodprotection/frdl/security/floodprotection/"
         }
   }  
 }
